<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nocomment.taylor.tasks.activities.Edit">

    <EditText
        android:id="@+id/input_edit_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/input_edit_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/due_date"
        android:inputType="datetime" />

    <EditText
        android:id="@+id/input_edit_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="textPostalAddress|textCapWords" />

    <EditText
        android:id="@+id/input_edit_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/notes" />
</LinearLayout>
